[package]
name = "rust-r34-scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
clap = "2.33.3"

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"